--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,9 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Imports: 
-    magrittr
+    magrittr,
+    beepr,
+    job,
+    rstudioapi
 Suggests: 
     testthat
